--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="dashboard-container">
   <app-side-nav-menu></app-side-nav-menu>
   <app-top-nav-menu></app-top-nav-menu>
+  <app-profile-view></app-profile-view>
 </div>
