--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,11 +13,15 @@ $text-off-color: #a8abae;
 $logout-color: #CD5656;
 $logout-color-hover: #df4848;
 
+$border-color: #B983FF;
+$button-color: #6F4CA4;
 
 html {
   box-sizing: border-box;
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -25,6 +29,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0;
+  padding: 0;
   min-height: 80%;
   min-width: 100%;
   background: $main-color;
