style: desktop dashboard + remove static width/height

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <app-side-nav-menu></app-side-nav-menu>
   <app-top-nav-menu></app-top-nav-menu>
   <app-profile-view></app-profile-view>
+  <app-upgrade-to-pro></app-upgrade-to-pro>
 </div>
