--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: flex;
+  justify-content: center;
+}
+
 body {
     background-color: yellow;
     font-family: "Roboto", serif;
@@ -8,10 +13,10 @@ body {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  width: 100%;
+  width: 95%;
   padding: 32px 0;
   display: grid;
-  grid-template-columns: 0.3fr repeat(5, 1fr) repeat(2, 0.85fr) 0.3fr;
+  grid-template-columns: 0.3fr 0.7fr repeat(4, 1fr) repeat(2, 0.7fr) 0.3fr;
   grid-template-rows: auto;
   grid-template-areas:
     ". nav header header header header profile profile ."
