--- a/src/app/top-nav-menu/top-nav-menu.component.scss
+++ b/src/app/top-nav-menu/top-nav-menu.component.scss
@@ -11,7 +11,7 @@
 }
 
 input {
-    width: 580px;
+    width: 75%;
     padding: 20px;
     border: 1px solid $main-color;
     border-radius: 20px;
