--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
   <app-top-nav-menu></app-top-nav-menu>
   <app-profile-view></app-profile-view>
   <app-upgrade-to-pro></app-upgrade-to-pro>
+  <app-total-widget [widgetType]="'total-finance'"></app-total-widget>
 </div>
