style: top-nav margin for children + total finance as separate component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
   <app-top-nav-menu></app-top-nav-menu>
   <app-profile-view></app-profile-view>
   <app-upgrade-to-pro></app-upgrade-to-pro>
-  <app-total-finance-widget [widgetType]="'total-finance'"></app-total-finance-widget>
+  <app-total-finance-widget></app-total-finance-widget>
 </div>
