--- a/src/app/profile-view/profile-view.component.scss
+++ b/src/app/profile-view/profile-view.component.scss
@@ -15,6 +15,7 @@
 
   .profile {
     width: 300px;
+    padding: 25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
