--- a/src/app/total-finance-widget/total-finance-widget.component.html
+++ b/src/app/total-finance-widget/total-finance-widget.component.html
@@ -1,5 +1,5 @@
 <div class="widget-container">
-  <div [ngClass]="widgetType">
+  <div class="total-finance">
     <p>Total Finance</p>
     <p>9 900 zł</p>
   </div>
