feat: total expanses static component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
   <app-profile-view></app-profile-view>
   <app-upgrade-to-pro></app-upgrade-to-pro>
   <app-total-finance-widget></app-total-finance-widget>
+  <app-total-expanses-widget></app-total-expanses-widget>
 </div>
